--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  background-color: var(--chakra-colors-bg);
+  background-color: transparent;
   overflow: hidden;
 
   font-synthesis: none;
